--- a/js/ui/package.json
+++ b/js/ui/package.json
@@ -12,6 +12,7 @@
     "postinstall": "rndebugger-open"
   },
   "dependencies": {
+    "@most/create": "^2.0.1",
     "babel-polyfill": "^6.23.0",
     "classnames": "^2.2.5",
     "core-decorators": "^0.15.0",
@@ -21,6 +22,7 @@
     "material-ui": "^0.18.0",
     "material-ui-datatables": "^0.16.9",
     "material-ui-icons": "next",
+    "most": "^1.3.0",
     "native-base": "^2.1.3",
     "react": "~15.4.0-rc.4",
     "react-dom": "^15.4.2",
@@ -37,6 +39,7 @@
     "redux": "^3.6.0",
     "redux-actions": "^1.2.1",
     "redux-form": "^6.6.3",
+    "socket.io-client": "^2.0.1",
     "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
