--- a/js/ui/package.json
+++ b/js/ui/package.json
@@ -23,6 +23,7 @@
     "material-ui-datatables": "^0.16.9",
     "material-ui-icons": "next",
     "most": "^1.3.0",
+    "most-subject": "^5.3.0",
     "native-base": "^2.1.3",
     "react": "~15.4.0-rc.4",
     "react-dom": "^15.4.2",
@@ -39,6 +40,7 @@
     "redux": "^3.6.0",
     "redux-actions": "^1.2.1",
     "redux-form": "^6.6.3",
+    "redux-thunk": "^2.2.0",
     "socket.io-client": "^2.0.1",
     "whatwg-fetch": "^2.0.3"
   },
