--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,27 +3,27 @@ version: "2"
 services:
   nginx:
     container_name: nginx
-    image: hipster/nginx
+    image: investrackr/nginx
     build:
       context: .
       dockerfile: operations/.docker/nginx/Dockerfile
     links:
-      - suave:suave
+      - api:api
     ports:
-      - "7372:80"
+      - "3000:80"
     networks:
-      - hipster_network
+      - investrackr_network
   node:
     container_name: suave
     working_dir: /app
-    image: hipster/suave
+    image: investrackr/suave
     build:
       context: .
       dockerfile: operations/.docker/suave/Dockerfile
     ports:
       - "8083:8083"
     networks:
-      - hipster_network
+      - investrackr_network
 
 networks:
   hipster_network:
