--- a/operations/.docker/api/Dockerfile
+++ b/operations/.docker/api/Dockerfile
@@ -2,13 +2,14 @@ FROM node:7.10.0
 
 # Install essential tools
 RUN apt-get -qq update && \
+    apt-get -qq install sudo && \
     apt-get -qq install apt-transport-https && \
     apt-get -qq install build-essential && \
     apt-get -qq install git
 
 # install yarn
-RUN curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add - && \
-    echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list && \
+RUN curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | sudo apt-key add - && \
+    echo "deb https://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list && \
     apt-get update && apt-get install yarn
 
 # Create app directory
