--- a/operations/.docker/nginx/Dockerfile
+++ b/operations/.docker/nginx/Dockerfile
@@ -17,7 +17,7 @@ RUN apt-get -qq install curl && \
 # install yarn
 RUN curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | sudo apt-key add - && \
     echo "deb https://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list && \
-    apt-get update && apt-get install -y yarn
+    apt-get update && apt-get -qq install yarn
 
 ENV NVM_DIR /home/node/.nvm
 ENV NODE_VERSION 7.10.0
