--- a/operations/.docker/api/Dockerfile
+++ b/operations/.docker/api/Dockerfile
@@ -21,6 +21,9 @@ COPY js/api/package.json /usr/src/app/
 
 RUN yarn install
 
+ENV NODE_ENV production
+ENV SERVER_PORT 5000
+
 # Bundle app source
 COPY js/api/ /usr/src/app
 
