--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,8 @@ services:
       dockerfile: operations/.docker/api/Dockerfile
     ports:
       - "8083:5000"
+    env_file:
+      - operations/env/api/.env
     networks:
       - investrackr_network
 
