--- a/js/ui/package.json
+++ b/js/ui/package.json
@@ -18,6 +18,7 @@
     "date-fns": "^1.28.4",
     "folktale": "^2.0.0-beta1",
     "immutable": "^3.8.1",
+    "include-media": "^1.4.9",
     "material-ui": "^0.18.0",
     "material-ui-datatables": "^0.16.9",
     "material-ui-icons": "next",
