--- a/js/api/package.json
+++ b/js/api/package.json
@@ -28,6 +28,7 @@
     "koa-passport": "^3.0.0",
     "koa-router": "next",
     "morgan": "^1.8.1",
+    "most": "^1.3.0",
     "neo4j-driver": "next",
     "node-fetch": "^1.6.3",
     "nodemon": "^1.11.0",
