--- a/js/notificationService/package.json
+++ b/js/notificationService/package.json
@@ -15,5 +15,8 @@
     "most": "^1.3.0",
     "neo4j-driver": "^1.3.0",
     "winston": "^2.3.1"
+  },
+  "devDependencies": {
+    "nodemon": "^1.11.0"
   }
 }
