--- a/js/notificationService/package.json
+++ b/js/notificationService/package.json
@@ -11,10 +11,12 @@
   "license": "MIT",
   "dependencies": {
     "dotenv": "^4.0.0",
+    "email-templates": "^2.5.6",
     "folktale": "^2.0.0-beta1",
     "immutable": "^3.8.1",
     "most": "^1.3.0",
     "neo4j-driver": "^1.3.0",
+    "nodemailer": "^4.0.1",
     "socket.io-client": "^2.0.1",
     "winston": "^2.3.1"
   },
