--- a/operations/.docker/nginx/Dockerfile
+++ b/operations/.docker/nginx/Dockerfile
@@ -32,10 +32,9 @@ RUN . ~/.nvm/nvm.sh && \
 ENV NODE_PATH $NVM_DIR/v$NODE_VERSION/lib/node_modules
 ENV PATH $NVM_DIR/versions/node/v$NODE_VERSION/bin:$PATH
 
-COPY js/ui /ui
+COPY js/ui .
 COPY js/common /common
 
-WORKDIR ui
 RUN yarn install
 RUN yarn run web:build
 
