--- a/operations/config/nginx.conf
+++ b/operations/config/nginx.conf
@@ -27,7 +27,7 @@ http {
         }
 
         location / {
-           try_files $uri $uri/ index.html;
+           try_files $uri $uri/ /index.html;
         }
     }
 }
