--- a/js/api/package.json
+++ b/js/api/package.json
@@ -31,7 +31,7 @@
     "most": "^1.3.0",
     "neo4j-driver": "next",
     "node-fetch": "^1.6.3",
-    "nodemon": "^1.11.0",
+    "aggregators": "^1.11.0",
     "passport-http-bearer": "^1.0.1",
     "uws": "0.14.5",
     "winston": "^2.3.1"
