--- a/operations/env/api/.env.sample
+++ b/operations/env/api/.env.sample
@@ -1,9 +1,10 @@
-NODE_ENV=development
+NODE_ENV=production
 SERVER_PORT=5000
 FB_LOGIN_URL=https://graph.facebook.com/me?fields=email,name,first_name,last_name,picture&access_token&access_token
-GOOGLE_LOGIN_URL=https://www.googleapis.com/oauth2/v3/about?access_token
+GOOGLE_LOGIN_URL=https://www.googleapis.com/plus/v1/people/me?access_token
+DB_URL=bolt://178.62.44.120:7687
 DB_USERNAME=
 DB_PASSWORD=
 SESSION_KEY=
 JWT_SECRET=
-JWT_LIFE_SPAN=
+JWT_LIFE_SPAN=7d
