--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,8 +15,8 @@
         "SERVER_PORT": "5000",
         "FB_LOGIN_URL": "https://graph.facebook.com/me?fields=email,name,first_name,last_name,picture&access_token&access_token",
         "GOOGLE_LOGIN_URL": "https://www.googleapis.com/plus/v1/people/me?access_token",
-        "DB_USERNAME": "barter",
-        "DB_PASSWORD": "barter_password",
+        "DB_USERNAME": "neo4j",
+        "DB_PASSWORD": "boliev_30",
         "DB_URL": "bolt://localhost:7687",
         "SESSION_KEY": "WdF0YZhpypVz+fNSXlvOdEHQRifJ+U8XMmcYRWFm/hU=",
         "JWT_SECRET": "34mMFlo4QLl3VKmIlCR7AwIhIVC/YnJRgfZmCMcnQBY=",
@@ -48,4 +48,3 @@
     }
   ]
 }
-
