--- a/js/ui/package.json
+++ b/js/ui/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "native:start": "REACT_DEBUGGER='rndebugger-open --open --port 8081' node node_modules/react-native/local-cli/cli.js start",
+    "native:start": "REACT_DEBUGGER='rndebugger-open --open --port 8081' node node_modules/five/local-cli/cli.js start",
     "test": "jest",
     "web:start": "PLATFORM_ENV=web env-cmd ./.env webpack-dev-server",
     "web:build": "PLATFORM_ENV=web env-cmd ./.env.production webpack",
@@ -27,12 +27,12 @@
     "most": "^1.6.1",
     "most-subject": "^5.3.0",
     "native-base": "^2.1.3",
-    "react": "~15.4.0-rc.4",
-    "react-dom": "^15.4.2",
+    "react": "16.0.0",
+    "react-dom": "16.0.0",
     "react-facebook-login": "^3.5.0",
     "react-flexbox-grid": "^1.1.3",
     "react-google-login": "^2.8.5",
-    "react-native": "0.38.1",
+    "react-native": "0.49.3",
     "react-native-facebook-login": "^1.4.0",
     "react-native-google-signin": "^0.9.0",
     "react-redux": "^5.0.3",
@@ -49,7 +49,7 @@
   },
   "devDependencies": {
     "babel-core": "6.24.0",
-    "babel-jest": "19.0.0",
+    "babel-jest": "21.2.0",
     "babel-loader": "6.4.1",
     "babel-plugin-transform-async-functions": "^6.22.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
@@ -57,15 +57,15 @@
     "babel-preset-es2015": "6.24.0",
     "babel-preset-react": "6.23.0",
     "babel-preset-react-hmre": "^1.1.1",
-    "babel-preset-react-native": "1.9.1",
+    "babel-preset-react-native": "4.0.0",
     "css-loader": "^0.28.1",
     "env-cmd": "^5.0.0",
     "file-loader": "^0.10.0",
-    "jest": "19.0.2",
+    "jest": "21.2.1",
     "jest-react-native": "18.0.0",
     "node-sass": "^4.5.2",
     "react-native-debugger-open": "^0.3.4",
-    "react-test-renderer": "~15.4.0-rc.4",
+    "react-test-renderer": "16.0.0-beta.5",
     "sass-loader": "^6.0.3",
     "style-loader": "^0.17.0",
     "webpack": "^2.2.1",
