--- a/js/ui/package.json
+++ b/js/ui/package.json
@@ -35,6 +35,7 @@
     "react-flexbox-grid": "^1.1.3",
     "react-google-login": "^2.8.5",
     "react-native": "0.49.3",
+    "react-native-config": "^0.9.0",
     "react-native-facebook-login": "^1.6.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.1.1",
