--- a/js/ui/android/app/build.gradle
+++ b/js/ui/android/app/build.gradle
@@ -138,6 +138,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-linear-gradient')
     compile project(':react-native-fbsdk')
     compile project(':react-native-config')
     compile fileTree(dir: "libs", include: ["*.jar"])
