--- a/js/ui/package.json
+++ b/js/ui/package.json
@@ -37,7 +37,10 @@
     "react-google-login": "^2.8.5",
     "react-native": "0.49.3",
     "react-native-config": "^0.9.0",
+    "react-native-easy-grid": "^0.1.15",
     "react-native-fbsdk": "^0.6.3",
+    "react-native-linear-gradient": "^2.3.0",
+    "react-native-snap-carousel": "^3.3.4",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.1.1",
     "react-router-native": "^4.1.1",
