--- a/js/ui/package.json
+++ b/js/ui/package.json
@@ -23,16 +23,16 @@
     "folktale": "^2.0.1",
     "immutable": "^3.8.1",
     "include-media": "^1.4.9",
-    "material-ui": "^0.18.0",
-    "material-ui-datatables": "^0.16.9",
+    "material-ui": "^0.19.4",
+    "material-ui-datatables": "^0.18.2",
     "material-ui-icons": "next",
-    "most": "^1.6.1",
+    "most": "^1.7.2",
     "most-subject": "^5.3.0",
     "native-base": "^2.3.3",
     "react": "16.0.0",
     "react-devtools": "^2.5.2",
     "react-dom": "16.0.0",
-    "react-facebook-login": "^3.5.0",
+    "react-facebook-login": "^3.6.2",
     "react-flexbox-grid": "^1.1.3",
     "react-google-login": "^2.8.5",
     "react-native": "0.49.3",
@@ -42,9 +42,9 @@
     "react-native-linear-gradient": "^2.3.0",
     "react-native-snap-carousel": "^3.3.4",
     "react-redux": "^5.0.6",
-    "react-router-dom": "^4.1.1",
+    "react-router-dom": "^4.2.2",
     "react-router-native": "^4.1.1",
-    "react-tap-event-plugin": "^2.0.1",
+    "react-tap-event-plugin": "^3.0.2",
     "redux": "^3.6.0",
     "redux-actions": "^1.2.1",
     "redux-form": "^6.6.3",
@@ -53,7 +53,7 @@
     "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
-    "babel-core": "6.24.0",
+    "babel-core": "^6.26.0",
     "babel-jest": "21.2.0",
     "babel-loader": "6.4.1",
     "babel-plugin-transform-async-functions": "^6.22.0",
@@ -73,9 +73,9 @@
     "react-test-renderer": "16.0.0-beta.5",
     "sass-loader": "^6.0.3",
     "style-loader": "^0.17.0",
-    "webpack": "^2.2.1",
-    "webpack-dev-server": "2.4.2",
-    "webpack-dotenv-plugin": "^2.0.0"
+    "webpack": "^3.8.1",
+    "webpack-dev-server": "^2.9.3",
+    "webpack-dotenv-plugin": "^2.0.2"
   },
   "jest": {
     "preset": "react-native"
