--- a/js/ui/package.json
+++ b/js/ui/package.json
@@ -27,7 +27,7 @@
     "material-ui-datatables": "^0.18.2",
     "material-ui-icons": "next",
     "most": "^1.7.2",
-    "most-subject": "^5.3.0",
+    "most-subject": "6",
     "native-base": "^2.3.3",
     "react": "16.0.0",
     "react-devtools": "^2.5.2",
