--- a/js/ui/package.json
+++ b/js/ui/package.json
@@ -32,7 +32,7 @@
     "react": "16.0.0",
     "react-devtools": "^2.5.2",
     "react-dom": "16.0.0",
-    "react-facebook-login": "^3.6.2",
+    "react-facebook-login-component": "^0.9.1",
     "react-flexbox-grid": "^1.1.3",
     "react-google-login": "^2.8.5",
     "react-native": "0.49.3",
