--- a/js/ui/package.json
+++ b/js/ui/package.json
@@ -34,7 +34,7 @@
     "react-dom": "16.0.0",
     "react-facebook-login-component": "^0.9.1",
     "react-flexbox-grid": "^1.1.3",
-    "react-google-login": "^2.8.5",
+    "react-google-login-component": "^0.9.2",
     "react-native": "0.49.3",
     "react-native-config": "^0.9.0",
     "react-native-easy-grid": "^0.1.15",
