--- a/js/ui/package.json
+++ b/js/ui/package.json
@@ -16,9 +16,11 @@
     "@amcharts/amcharts3-react": "^2.0.7",
     "@most/create": "^2.0.1",
     "amcharts3": "^3.21.2",
+    "art": "^0.10.1",
     "babel-polyfill": "^6.23.0",
     "classnames": "^2.2.5",
     "core-decorators": "^0.15.0",
+    "d3-shape": "^1.2.0",
     "date-fns": "^1.28.4",
     "folktale": "^2.0.1",
     "immutable": "^3.8.1",
