--- a/js/common/package.json
+++ b/js/common/package.json
@@ -12,6 +12,7 @@
     "date-fns": "^1.28.5",
     "folktale": "^2.0.0-beta1",
     "immutable": "^3.8.1",
+    "lodash.omit": "^4.5.0",
     "most": "^1.3.0",
     "neo4j-driver": "^1.3.0",
     "socket.io-client": "^2.0.3",
