--- a/js/ui/package.json
+++ b/js/ui/package.json
@@ -46,6 +46,7 @@
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-router-native": "^4.1.1",
+    "react-table": "^6.7.4",
     "react-tap-event-plugin": "^3.0.2",
     "redux": "^3.6.0",
     "redux-actions": "^1.2.1",
