--- a/js/api/.env.sample
+++ b/js/api/.env.sample
@@ -2,6 +2,7 @@ NODE_ENV=development
 SERVER_PORT=5000
 FB_LOGIN_URL=https://graph.facebook.com/me?fields=email,name,first_name,last_name,picture&access_token&access_token
 GOOGLE_LOGIN_URL=https://www.googleapis.com/oauth2/v3/about?access_token
+DB_URL=
 DB_USERNAME=
 DB_PASSWORD=
 SESSION_KEY=
